--- a/Regame Port/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Regame Port/Assets/Plugins/Android/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <category android:name="android.intent.category.INFO"/>
             </intent-filter>
         </activity>
-        <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="false" />
+        <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="true" />
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
